# reflector

./: .gitignore  LICENSE.TXT  LICENSE.txt  README  README.md  README.txt  reflector  reflector.sln  reflector.vcxproj  reflector.vcxproj.filters
config/: Gw.Base.props  Gw.Configuration.Debug.props  Gw.Configuration.Release.props
ext/: versions.txt
llvm/tools/clang/tools/reflector/: CMakeLists.txt  JSONOutput.h  Makefile  ReflectContext.cpp  ReflectOutput.cpp  Reflector.cpp
samples/: hash.cpp  hash.h  main.cpp  process_shapes.pl  process_templates.pl  sample.vcxproj  sample.vcxproj.filters  shapes.cpp  shapes.h  shapes.h.out  shapes.xml  types.cpp.tt  types.h.tt
samples/PropertySystem/: PropertySystem.sln  PropertySystem.vcxproj  PropertySystem.vcxproj.filters  shapes.xml
samples/Template2/: Changes  HACKING  MANIFEST.SKIP  README
src/: Reflector.cpp  Reflector.h  ReflectorASTConsumer.cpp  ReflectorASTConsumer.h  ReflectorCommentHandler.cpp  ReflectorCommentHandler.h  ReflectorContext.cpp  ReflectorContext.h  ReflectorWriter.cpp  ReflectorWriter.h  gw  gwRTTI
src/_ref/: Main.cpp
src/envision/: envisaged.coffee  envision.coffee  extra.def  out.cpp  package.json  rtti.def  rtti.def.expanded  rtti.dot  rttidefs.def_
src/example/: Makefile  classes.cpp  classes.h  compile_commands.json  example.cpp  example.json  gameobjects.json  json.cpp  json.h  rtti.cpp
src/examples/: ASTWalker.cpp  Makefile  example.vcxproj  (+2 more)
test/: test.cpp  test.h  test2.cpp  test_01_language.cpp  test_02_reflect.cpp
tests/: compile_commands.json  test.cpp  test.json  test.out
(+205 files in other folders)
